src/test/deca/context/invalid/declVar-multipleWrongType.deca
{
    int m, b = 3.0, s;
}